[package]
name = "urlencoded"
version = "0.6.0"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Michael Sproul <micsproul@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iron/urlencoded"
documentation = "http://ironframework.io/doc/urlencoded/"
description = "Decoding middleware for url-encoded data. For use with Iron."
license = "MIT"
keywords = ["iron", "web", "url", "encoding"]

[dependencies]
iron = { git = "https://github.com/ayourtch/iron/" }
url = "1.6"
plugin = { git = "https://github.com/ayourtch/rust-plugin/" }
bodyparser = { git = "https://github.com/ayourtch/body-parser" }
